force-app/main/default/objects/DocGen_Template__c/DocGen_Template__c.object-meta.xml
<CustomObject>
    <description>Stores templates for PDF/Slide generation and their configuration.</description>
    <label>Portwood Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portwood Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>