force-app/main/default/objects/DocGen_Template__c/fields/Allow_Markup__c.field-meta.xml
<CustomField>
    <fullName>Allow_Markup__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >When enabled, signers using this template can draw, add text, shapes and highlights (markup) on the document during signing. The marked-up PDF is saved back to the related record.</description>
    <inlineHelpText
    >Let signers mark up the PDF (pen, text, shapes, highlighter) while signing. The marked-up document is saved to the related record on approve or reject.</inlineHelpText>
    <label>Allow Markup</label>
    <type>Checkbox</type>
</CustomField>