force-app/main/default/objects/DocGen_Template__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description
    >Stable developer key for this template. Flow actions accept it in place of the record Id (Template API Name input), so Flows survive sandbox-to-production deploys where record Ids change. Letters, numbers, and underscores recommended. Unique when set; blank is allowed.</description>
    <externalId>true</externalId>
    <label>API Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>