force-app/main/default/objects/DocGen_Template__c/fields/Base_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Base_Object_API__c</fullName>
    <description
    >API Name of the root SObject (e.g., Account) for SOQL-backed templates, or one of the sentinels: 'ApexProvider' (v4 Apex Data Provider — see Query_Config__c for the provider class), 'FlowJsonData' (data supplied at runtime via DocGenFlowAction.jsonData). Schema-required; never null.</description>
    <label>Base Object API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>