force-app/main/default/objects/DocGen_Template__c/fields/Draft_Body__c.field-meta.xml
<CustomField>
    <fullName>Draft_Body__c</fullName>
    <description
    >Staging area for an AI-generated HTML body. Holds the model's RAW output, before the Flying Saucer validator strips what the PDF engine ignores. The validated body is what gets written to the docgen_html_body_ ContentVersion and opened in the Designer; this field is kept so the two can be compared.</description>
    <label>Draft Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>