force-app/main/default/objects/DocGen_Template__c/fields/Form_Fields_Config__c.field-meta.xml
<CustomField>
    <fullName>Form_Fields_Config__c</fullName>
    <description
    >JSON storing the signer form-field config: {"formFields":[...]}. Dedicated carrier so the feature works for single-object templates whose Query_Config__c is a flat field-list string.</description>
    <label>Form Fields Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>