force-app/main/default/objects/DocGen_Template__c/fields/Prefill_Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Prefill_Signer_Email__c</fullName>
    <description
    >Template default for pre-filling the signer's email at signing (#verification). Inherit = use the org default; Yes = skip the email-entry step and auto-send the code to the known address; No = require the signer to type their email. Resolved at send time and stored on the signature request.</description>
    <label>Pre-fill Signer Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Inherit</fullName><default>true</default><label>Inherit (use org default)</label></value>
            <value><fullName>Yes</fullName><default>false</default><label>Yes (auto-send to known email)</label></value>
            <value><fullName>No</fullName><default>false</default><label>No (signer types email)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>