force-app/main/default/objects/DocGen_Template__c/fields/Required_Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Required_Permission_Sets__c</fullName>
    <description
    >Comma-separated list of permission set API names. When set, only users assigned to AT LEAST ONE of the listed permission sets see this template in the runner / signature sender / Flow / bulk picker. Empty = visible to all Portwood users. Any-of semantics — a template requiring "Exec_Templates,Finance_Templates" appears for users with either set assigned.</description>
    <inlineHelpText>Comma-separated permission set API names. Leave blank for everyone.</inlineHelpText>
    <label>Required Permission Sets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>