force-app/main/default/objects/DocGen_Template__c/fields/Signer_Verification__c.field-meta.xml
<CustomField>
    <fullName>Signer_Verification__c</fullName>
    <description
    >Template default for signer email-PIN verification (#verification). Inherit = use the org default (Portwood Settings); Required = always verify; Off = skip verification. Individual sends can still override. Resolved at send time and stored on the signature request.</description>
    <label>Signer Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Inherit</fullName><default>true</default><label>Inherit (use org default)</label></value>
            <value><fullName>Required</fullName><default>false</default><label>Required (email PIN)</label></value>
            <value><fullName>Off</fullName><default>false</default><label>Off (no verification)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>